Fix featured list in admin interface

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
@@ -40,7 +40,7 @@
                 {% for featured_event in featured_events %}
                 <tr>
                     <td>
-                        {% featured_event featured_event.event %}
+                        {% featured_event featured_event.event_day %}
                     </td>
                     <td>
                         {% if featured_event.active %}
