--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -37,6 +37,7 @@
     <script src="{{STATIC_URL}}js/location/suggest_form.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/location/venue_autocomplete.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}ckeditor/ckeditor/ckeditor.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/create_event/dombuilder.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/create_event/description.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/create_event/boolean_tags.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/create_event/create_event_page.js" type="text/javascript"></script>
@@ -245,6 +246,8 @@
                             <td>
                                 {{form.when}}
                                 {{form.when_json}}
+                                {{form.when_multidayevent}}
+                                {{form.when_multitimeevent}}
                             </td>
                             
                         </tr>
