--- a/alpha/home/templates/base-with-advertising.html
+++ b/alpha/home/templates/base-with-advertising.html
@@ -4,7 +4,7 @@
 {% block advertising %}
     <div>
         <div class="advertising-right-container">
-            {% advertising_home_group %}
+            {% advertising_group "300x250|300x250|300x250" %}
         </div>
     </div>
 {% endblock%}
