Events rework. Upgrate short_event template tag

--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -246,8 +246,8 @@
                             <td>
                                 {{form.when}}
                                 {{form.when_json}}
-                                {{form.when_multidayevent}}
-                                {{form.when_multitimeevent}}
+                                {{form.event_type}}
+                                {{form.occurrences_json}}
                             </td>
                             
                         </tr>
