--- a/alpha/event/static/styles/browse/event_details.css
+++ b/alpha/event/static/styles/browse/event_details.css
@@ -63,15 +63,17 @@
 }
 
 .event-details-block .event-details .event-date-wrapper {
-    color: #0230c5;    
+    color: #0230c5;
+    margin-left: 30px;
 }
 
 .event-details-block .event-details .event-description {
     margin:0;
-    margin-top:12px;
+    margin-top:18px;
     color: #000;
     width: 250px;
     white-space: normal;
+    margin-left: 30px;
 }
 
 .event-details-block .event-details .event-actions {
@@ -210,7 +212,7 @@
 
 .venue_map_preview {
     vertical-align: middle;
-    margin-top: 20px;
+    margin-left: 50px;    
     line-height: 100px;
 }
 
@@ -249,3 +251,50 @@
     display: block;
 }
 
+.event-days {
+    margin-left: 5px;
+}
+
+.event-day-switch {
+    display: inline-block;
+    width: 60px;
+    height: 22px;
+    line-height: 22px;
+    text-align: center;
+    vertical-align: middle;
+
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+
+    border: 1px solid #c4c4c4;
+    background: #fff;
+    color: #000;
+    margin-right: 0px;
+    cursor: pointer;
+}
+.event-day-switch.active {
+    background: #f4f4f4;
+}
+
+.show-times {
+    margin-top: 5px;
+    font-size:12px;
+    color:#022e52;
+}
+
+.show-times .show-times-wrapper {
+    width: 100%;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding: 5px;
+    margin-top: 3px;
+}
+
+.show-times .show-time-day {
+    display: none;
+}
+
+.show-times .show-time-day.active {
+    display: block;
+}
