--- a/alpha/event/static/styles/browse/event_details.css
+++ b/alpha/event/static/styles/browse/event_details.css
@@ -257,7 +257,7 @@
 
 .event-day-switch {
     display: inline-block;
-    width: 60px;
+    width: 55px;
     height: 22px;
     line-height: 22px;
     text-align: center;
@@ -296,5 +296,13 @@
 }
 
 .show-times .show-time-day.active {
+    display: block;
+}
+
+.show-day-description {
+    display: none;
+}
+
+.show-day-description.active {
     display: block;
 }
